@@ -447,6 +447,7 @@ namespace swig
 namespace std {
   %template(liststr) list<std::string>;
   %template(pairunsigned) pair<unsigned, unsigned>;
+  %template(pairmark_t) pair<spot::acc_cond::mark_t, spot::acc_cond::mark_t>;
   %template(vectorformula) vector<spot::formula>;
   %template(vectorunsigned) vector<unsigned>;
   %template(vectorpairunsigned) vector<pair<unsigned, unsigned>>;
